--- a/ui/package.json
+++ b/ui/package.json
@@ -4,9 +4,13 @@
   "private": true,
   "dependencies": {
     "react": "^16.4.0",
+    "react-bootstrap": "^0.32.1",
     "react-bootstrap-table": "^4.3.1",
+    "react-bootstrap-table-next": "^0.1.13",
+    "react-bootstrap-table2-editor": "^0.2.1",
     "react-dom": "^16.4.0",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-table": "^6.8.6"
   },
   "scripts": {
     "start": "react-scripts start",
