--- a/api/package.json
+++ b/api/package.json
@@ -14,10 +14,11 @@
     "eslint": "^4.19.1",
     "hapi": "^17.5.1",
     "hapi-swagger": "^9.1.1",
+    "inert": "5.1.0",
     "joi": "^10.2.2",
     "mongojs": "^2.4.0",
+    "node-persist": "^3.0.1",
     "node-uuid": "^1.4.7",
-    "vision": "5.3.3",
-    "inert": "5.1.0"
+    "vision": "5.3.3"
   }
 }
