--- a/ui/package.json
+++ b/ui/package.json
@@ -3,14 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ajv": "^6.5.3",
     "react": "^16.4.0",
     "react-bootstrap": "^0.32.1",
     "react-bootstrap-table": "^4.3.1",
     "react-bootstrap-table-next": "^0.1.13",
     "react-bootstrap-table2-editor": "^0.2.1",
     "react-dom": "^16.4.0",
+    "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
-    "react-table": "^6.8.6"
+    "react-table": "^6.8.6",
+    "redux": "^4.0.0",
+    "swagger-js-codegen": "^1.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
