--- a/ui/package.json
+++ b/ui/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "ajv": "^6.5.3",
+    "babel-polyfill": "^6.26.0",
+    "cross-fetch": "^2.2.2",
     "react": "^16.4.0",
     "react-bootstrap": "^0.32.1",
     "react-bootstrap-table": "^4.3.1",
@@ -14,6 +16,8 @@
     "react-scripts": "1.1.4",
     "react-table": "^6.8.6",
     "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "swagger-js-codegen": "^1.12.0"
   },
   "scripts": {
