--- a/ui/package.json
+++ b/ui/package.json
@@ -6,6 +6,7 @@
     "ajv": "^6.5.3",
     "babel-polyfill": "^6.26.0",
     "cross-fetch": "^2.2.2",
+    "popper.js": "^1.14.4",
     "react": "^16.4.0",
     "react-bootstrap": "^0.32.1",
     "react-bootstrap-table": "^4.3.1",
