--- a/ui/src/.jsbeautifyrc
+++ b/ui/src/.jsbeautifyrc
@@ -1,7 +1,7 @@
 {
-  "indent_size": "4",
+  "indent_size": 4,
   "indent_char": " ",
-  "max_preserve_newlines": "5",
+  "max_preserve_newlines": 5,
   "preserve_newlines": true,
   "keep_array_indentation": false,
   "break_chained_methods": false,
@@ -11,7 +11,7 @@
   "unescape_strings": false,
   "jslint_happy": false,
   "end_with_newline": true,
-  "wrap_line_length": "0",
+  "wrap_line_length": 0,
   "indent_inner_html": false,
   "comma_first": false,
   "e4x": true,
