--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,7 @@
   "author": "Christian Keller",
   "license": "Apache-2.0",
   "dependencies": {
+    "axios": "^0.18.0",
     "boom": "^4.2.0",
     "eslint": "^4.19.1",
     "hapi": "^17.5.1",
