--- a/ui/package.json
+++ b/ui/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "ajv": "^6.5.3",
+    "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "cross-fetch": "^2.2.2",
     "popper.js": "^1.14.4",
@@ -18,6 +19,7 @@
     "react-table": "^6.8.6",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
+    "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
     "swagger-js-codegen": "^1.12.0"
   },
