--- a/api/package.json
+++ b/api/package.json
@@ -17,7 +17,8 @@
     "hapi-swagger": "^9.1.1",
     "inert": "5.1.0",
     "joi": "^10.2.2",
-    "mongojs": "^2.4.0",
+    "knex": "^0.15.2",
+    "mysql": "^2.16.0",
     "node-persist": "^3.0.1",
     "node-uuid": "^1.4.7",
     "vision": "5.3.3"
