--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "boom": "^4.2.0",
+    "bounce": "^1.2.0",
     "eslint": "^4.19.1",
     "hapi": "^17.5.1",
     "hapi-swagger": "^9.1.1",
@@ -20,7 +21,7 @@
     "knex": "^0.15.2",
     "mysql": "^2.16.0",
     "node-persist": "^3.0.1",
-    "node-uuid": "^1.4.7",
+    "uuid": "^3.3.2",
     "vision": "5.3.3"
   }
 }
