Create docker container for UI

--- a/ui/.env
+++ b/ui/.env
@@ -1,1 +1,5 @@
 BROWSER=chrome
+
+# this is required to make hot reloading work in Docker 
+# set the watcher to use the polling mode
+CHOKIDAR_USEPOLLING=true
