--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,13 +17,13 @@ services:
       - '0.0.0.0:8080:8080'
 
   api:
-    image: booking-beaver-api
+    image: chrskllr/booking-beaver-api
     networks: ['alpha']
     ports: 
       - '0.0.0.0:7500:7500'
 
   ui:
-    image: booking-beaver-ui
+    image: chrskllr/booking-beaver-ui
     networks: ['alpha']
     ports: 
       - '0.0.0.0:3000:3000'
