Update api to connect to db and being able to run the knex migrations

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,8 @@ services:
 
   api:
     image: chrskllr/booking-beaver-api
+    depends_on:
+      - db
     networks: 
       - alpha
     ports: 
@@ -36,6 +38,8 @@ services:
 
   ui:
     image: chrskllr/booking-beaver-ui
+    depends_on:
+      - api
     networks: 
       - alpha
     ports: 
