--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,8 @@
   "private": true,
   "scripts": {
     "start": "nodemon server.js",
+    "migrate": "knex migrate:latest",
+    "rollback": "knex migrate:rollback",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Christian Keller",
